--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,6 @@
 @use "./layout/banner";
 @use "./layout/categorias";
 @use "./layout/catalogo";
-@use "./layout/video";
+@use "./components/video";
 @use "./layout/registro";
 @use "./layout/footer";
