--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -17,7 +17,7 @@ footer {
 
         &:hover {
             text-decoration: underline; /* Mantiene el subrayado en el hover */
-            color: #4705fc; /* Cambia el color al hacer hover */
+            color: #1fe5ff; /* Cambia el color al hacer hover */
         }
     }
 }
