--- a/scss/layout/_catalogo.scss
+++ b/scss/layout/_catalogo.scss
@@ -47,6 +47,7 @@
         padding: 10px 20px;
         text-decoration: none;
         display: inline-block;
+        border-radius: 0px;
         
         &:hover {
             background: #555;
