--- a/css/styles.css
+++ b/css/styles.css
@@ -320,6 +320,10 @@ footer a.contac-link:hover {
 
 /* Consultas de medios para adaptabilidad */
 @media (max-width: 900px) {
+  .containercar {
+    margin-bottom: 120px;
+    margin-top: 120px;
+  }
   .boxcar {
     flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
     padding: 15px;
@@ -327,6 +331,7 @@ footer a.contac-link:hover {
   }
   img {
     width: 100%; /* La imagen ocupa todo el ancho */
+    margin: auto;
   }
   .descripcion {
     width: 100%; /* La descripción ocupa todo el ancho */
@@ -334,7 +339,7 @@ footer a.contac-link:hover {
     gap: 15px; /* Reduce el espacio entre elementos */
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   .containercar {
     margin-bottom: 120px;
     margin-top: 120px;
