--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
   color: #333;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh; /* Hace que el contenedor ocupe toda la ventana */
 }
 
 /* Contenedor principal */
@@ -333,13 +333,16 @@ footer a.contac-link:hover {
 /* Consultas de medios para adaptabilidad */
 @media (max-width: 900px) {
   .containercar {
-    margin-bottom: 120px;
-    margin-top: 120px;
+    margin-bottom: 60px;
+    margin-top: 60px;
   }
   .boxcar {
     flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
     padding: 15px;
     max-width: 100%; /* Asegúrate de que no haya restricción de ancho */
+  }
+  .hr {
+    width: 200px;
   }
   img {
     width: 100%; /* La imagen ocupa todo el ancho */
@@ -355,8 +358,8 @@ footer a.contac-link:hover {
 }
 @media (max-width: 600px) {
   .containercar {
-    margin-bottom: 120px;
-    margin-top: 120px;
+    margin-bottom: 60px;
+    margin-top: 60px;
   }
   .boxcar {
     flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
