--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box; /*Este valor asegura que el ancho y alto de los elementos incluyan el relleno y el borde*/
+    
 }
 
 /* Configuración del body */
@@ -14,7 +15,8 @@ body {
     color: #333;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh;  /* Hace que el contenedor ocupe toda la ventana */
+    
 }
 
 /* Contenedor principal */
