--- a/scss/components/_carrito.scss
+++ b/scss/components/_carrito.scss
@@ -57,14 +57,18 @@
 /* Consultas de medios para adaptabilidad */
 @media (max-width: 900px) {
     .containercar{
-        margin-bottom: 120px;
-        margin-top: 120px;
+        margin-bottom: 60px;
+        margin-top: 60px;
 
     }
     .boxcar {
         flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
         padding: 15px;
         max-width: 100%; /* Asegúrate de que no haya restricción de ancho */
+    }
+
+    .hr {
+        width: 200px;
     }
 
     img {
@@ -83,8 +87,8 @@
 
 @media (max-width: 600px) {
     .containercar{
-        margin-bottom: 120px;
-        margin-top: 120px;
+        margin-bottom: 60px;
+        margin-top: 60px;
 
     }
     .boxcar {
