--- a/scss/components/_carrito.scss
+++ b/scss/components/_carrito.scss
@@ -44,6 +44,8 @@
             padding: 10px 20px;
             border: none;
             border-radius: 0px; 
+            text-align: center;
+            text-decoration: none;
             cursor: pointer;
             transition: background 0.3s;
             &:hover {
