--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -33,3 +33,30 @@
 }
 
 /* fin banner -- */
+
+
+
+
+ /*CARRUSEL---------------------------------------------------------------------------*/
+
+#carouselExampleAutoplaying {
+  max-width: 80%;             /* Define el ancho máximo del carrusel */
+  height: auto;              /* Establece una altura fija para el carrusel */
+  display: flex;              /* Usa flexbox para centrar */
+  align-items: center;        /* Centra verticalmente */
+  justify-content: center;    /* Centra horizontalmente */
+  margin: 20px auto;             /* Asegura que el carrusel esté centrado en su contenedor */
+
+    .carousel-inner {
+      .carousel-item {
+        img {
+          width: 100%;                /* Asegura que las imágenes se ajusten al ancho del carrusel */
+          height: auto;               /* Mantiene la proporción de las imágenes */
+          object-fit: cover;          /* Recorta las imágenes si es necesario para ajustarse */
+          
+          
+         
+        }
+      }
+    }
+  }
