--- a/scss/layout/_catalogo.scss
+++ b/scss/layout/_catalogo.scss
@@ -22,6 +22,7 @@
     text-align: center;
     background: #f9f9f9;
     box-sizing: border-box; /* Incluye el padding y el borde en el cálculo del ancho */
+  
     
     img {
         width: 100%;
@@ -48,12 +49,19 @@
         text-decoration: none;
         display: inline-block;
         border-radius: 0px;
+        width: 80%; /* Ocupa todo el ancho del contenedor */
+        padding: 10px;
+        
+       
+        
         
         &:hover {
             background: #555;
             color:#fff;
         }
     }
+
+ 
 
     /* Consultas de medios para adaptabilidad */
     @media (max-width: 1200px) {
