--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @use "./layout/catalogo";
 @use "./layout/registro";
 @use "./layout/footer";
+@use "./layout/verproducto";
+@use "./layout/carrito";
 
-@use "./components/carrito";
 @use "./components/video";
