--- a/scss/layout/_verproducto.scss
+++ b/scss/layout/_verproducto.scss
@@ -6,6 +6,7 @@
     height: 100vh;
     margin-top: 20px;
     margin-bottom: 20px;
+    
 }
 
 .boxcar {
@@ -61,6 +62,7 @@
     .containercar{
         margin-bottom: 60px;
         margin-top: 60px;
+        height: auto;
 
     }
     .boxcar {
@@ -91,6 +93,7 @@
     .containercar{
         margin-bottom: 60px;
         margin-top: 60px;
+        height: auto;
 
     }
     .boxcar {
@@ -119,9 +122,67 @@
 
 
 
+/* Estilo para la ventana modal */
+.modal {
+    display: none; /* Ocultar el modal por defecto */
+    position: fixed; /* Mantenerlo en la misma posición */
+    z-index: 1000; /* Asegurarse de que esté por encima de otros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Ancho completo */
+    height: 100%; /* Alto completo */
+    overflow: auto; /* Habilitar el desplazamiento si es necesario */
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+
+    .modal-content {
+        background-color: #fff; /* Fondo blanco */
+        margin: 15% auto; /* Margen superior e inferior */
+        padding: 20px; /* Espaciado interno */
+        border: 1px solid #888; /* Borde */
+        width: 300px; /* Ancho de la ventana modal */
+        text-align: center; /* Centrar el texto */
+        gap: 15px;
+
+        .close-button {
+            color: #aaa; /* Color del botón de cerrar */
+            float: right; /* Posición en la esquina superior derecha */
+            font-size: 28px; /* Tamaño de la fuente */
+            font-weight: bold; /* Negrita */
+        }
+        
+        .close-button:hover,
+        .close-button:focus {
+            color: black; /* Color al pasar el mouse */
+            text-decoration: none; /* Sin subrayado */
+            cursor: pointer; /* Cursor de puntero */
+        }
+        
+        
+        .btnmodal {
+            background: #333;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 0px; 
+            text-align: center;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background 0.3s;
+            &:hover {
+                background: #555; /* Fondo más claro al pasar el mouse */
+            }
+        }
 
 
-
-
-
+    }
+    
+    
+    
+    
+    
+    
+    
+    
+    
+}
 
