--- a/scss/layout/_carrito.scss
+++ b/scss/layout/_carrito.scss
@@ -33,6 +33,12 @@
             margin:0 0;
         }
 
+        button {
+            font-size: 28px; 
+            background-color: #f9f9f9;
+            border: #f9f9f9;
+        }
+
      }
 
      
